# api/rest/controller/operations.go
@@ -29,17 +29,14 @@ func NewOperationsAPI(oS *operation.Service, snS *statusnotification.Service) *O
 // @Tags Operations
 // @Accept json
 // @Produce json
-// @Security ApiKeyAuth
-// @Param Body body rpc.RemoteStartTransactionReqPublic true "Post RemoteStartTransactionReq body"
+// @Param Body body rpc.RemoteStartTransactionReq true "Post RemoteStartTransactionReq body"
 // @Success 200 {object} rpc.RemoteStartTransactionResp
 // @Router /v2/ocpp/operations/remote-start-transaction [post]
 func (api *OperationsAPI) RemoteStartTransaction(c *gin.Context) {
 	ctx := context.Background()
 	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
 
-	applicationId := c.GetString("application_id")
-
-	req := &rpc.RemoteStartTransactionReqPublic{}
+	req := &rpc.RemoteStartTransactionReq{}
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
 		c.Error(err).SetType(gin.ErrorTypeBind)
@@ -51,11 +48,7 @@ func (api *OperationsAPI) RemoteStartTransaction(c *gin.Context) {
 		return
 	}
 
-	res, err := api.operationService.RemoteStartTransaction(ctx, &rpc.RemoteStartTransactionReq{
-		ApplicationId:         applicationId,
-		ChargePointIdentifier: req.ChargePointIdentifier,
-		ConnectorId:           req.ConnectorId,
-	})
+	res, err := api.operationService.RemoteStartTransaction(ctx, req)
 
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
@@ -78,17 +71,14 @@ func (api *OperationsAPI) RemoteStartTransaction(c *gin.Context) {
 // @Tags Operations
 // @Accept json
 // @Produce json
-// @Security ApiKeyAuth
-// @Param Body body rpc.RemoteStopTransactionReqPublic true "Post RemoteStopTransactionReq body"
+// @Param Body body rpc.RemoteStopTransactionReq true "Post RemoteStopTransactionReq body"
 // @Success 200 {object} rpc.RemoteStopTransactionResp
 // @Router /v2/ocpp/operations/remote-stop-transaction [post]
 func (api *OperationsAPI) RemoteStopTransaction(c *gin.Context) {
 	ctx := context.Background()
 	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
 
-	applicationId := c.GetString("application_id")
-
-	req := &rpc.RemoteStopTransactionReqPublic{}
+	req := &rpc.RemoteStopTransactionReq{}
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
 		c.Error(err).SetType(gin.ErrorTypeBind)
@@ -100,59 +90,7 @@ func (api *OperationsAPI) RemoteStopTransaction(c *gin.Context) {
 		return
 	}
 
-	res, err := api.operationService.RemoteStopTransaction(ctx, &rpc.RemoteStopTransactionReq{
-		ApplicationId:         applicationId,
-		ChargePointIdentifier: req.ChargePointIdentifier,
-		ConnectorId:           req.ConnectorId,
-	})
-
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			"status":  http.StatusBadRequest,
-			"message": err.Error(),
-			"data":    nil,
-		})
-		return
-	}
-
-	c.JSON(http.StatusOK, gin.H{
-		"status":  http.StatusOK,
-		"message": "Success",
-		"data":    res,
-	})
-}
-
-// GetLatestStatus fetches the latest status notifications from each connector for a particular charge_point_id
-// @Summary Get Status of Connectors
-// @Tags Operations
-// @Accept json
-// @Produce json
-// @Security ApiKeyAuth
-// @Param Body body rpc.GetLatestStatusNotificationsReqPublic true "Post GetLatestStatus body"
-// @Success 200 {object} rpc.GetLatestStatusNotificationsResp
-// @Router /v2/ocpp/operations/get-latest-status [post]
-func (api *OperationsAPI) GetLatestStatus(c *gin.Context) {
-	ctx := context.Background()
-	ctx = context.WithValue(ctx, constants.CtxKey("gin"), c)
-
-	applicationId := c.GetString("application_id")
-
-	req := &rpc.GetLatestStatusNotificationsReqPublic{}
-	err := c.ShouldBindJSON(&req)
-	if err != nil {
-		c.Error(err).SetType(gin.ErrorTypeBind)
-		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{
-			"status":  http.StatusUnprocessableEntity,
-			"message": err.Error(),
-			"data":    nil,
-		})
-		return
-	}
-
-	res, err := api.statusnotificationService.GetLatestStatusNotifications(ctx, &rpc.GetLatestStatusNotificationsReq{
-		ApplicationId:         applicationId,
-		ChargePointIdentifier: req.ChargePointIdentifier,
-	})
+	res, err := api.operationService.RemoteStopTransaction(ctx, req)
 
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
