# api/rest/router/router.go
@@ -10,28 +10,24 @@ import (
 
 	"github.com/Beep-Technologies/beepbeep3-ocpp/api/rest/controller"
 	docs "github.com/Beep-Technologies/beepbeep3-ocpp/docs"
-	middleware "github.com/Beep-Technologies/beepbeep3-ocpp/internal/middleware"
 	ocppserver "github.com/Beep-Technologies/beepbeep3-ocpp/internal/ocpp_server"
 )
 
 type Router struct {
 	ocppWebSocketServer *ocppserver.OCPPWebSocketServer
-	applicationsAPI     *controller.ApplicationsAPI
 	chargepointsAPI     *controller.ChargePointsAPI
-	middleware          *middleware.Middleware
+	operationsAPI       *controller.OperationsAPI
 }
 
 func NewRouter(
 	s *ocppserver.OCPPWebSocketServer,
-	aa *controller.ApplicationsAPI,
 	ca *controller.ChargePointsAPI,
-	m *middleware.Middleware,
+	oa *controller.OperationsAPI,
 ) (rt *Router) {
 	return &Router{
 		ocppWebSocketServer: s,
-		applicationsAPI:     aa,
 		chargepointsAPI:     ca,
-		middleware:          m,
+		operationsAPI:       oa,
 	}
 }
 
@@ -45,7 +41,7 @@ func (rt *Router) Apply(r *gin.Engine) *gin.Engine {
 	}))
 
 	// set up websocket server endpoint
-	r.GET("/ocpp-central-system//:entityCode/:chargePointIdentifier", rt.ocppWebSocketServer.HttpUpgradeHandler)
+	r.GET("/ocpp-central-system/:entityCode/:chargePointIdentifier", rt.ocppWebSocketServer.HttpUpgradeHandler)
 
 	rg := r.Group("v2/ocpp")
 
@@ -61,11 +57,12 @@ func (rt *Router) Apply(r *gin.Engine) *gin.Engine {
 
 	rg.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	rg.POST("/charge_points", rt.middleware.APIKeyMiddleware(), rt.chargepointsAPI.CreateChargePoint)
-	rg.POST("/charge_points/id_tags", rt.middleware.APIKeyMiddleware(), rt.chargepointsAPI.CreateChargePointIdTag)
+	// set up APIs
+	rg.POST("/operations/remote-start-transaction", rt.operationsAPI.RemoteStartTransaction)
+	rg.POST("/operations/remote-stop-transaction", rt.operationsAPI.RemoteStopTransaction)
 
-	rg.GET("/applications/callbacks", rt.middleware.APIKeyMiddleware(), rt.applicationsAPI.GetApplicationCallbacks)
-	rg.POST("/applications/callbacks", rt.middleware.APIKeyMiddleware(), rt.applicationsAPI.SetApplicationCallback)
+	rg.GET("/charge-points/:entityCode/:chargePointIdentifier", rt.chargepointsAPI.GetChargePoint)
+	rg.GET("/charge-points/:entityCode/:chargePointIdentifier/status", rt.chargepointsAPI.GetChargePointConnectorStatus)
 
 	return r
 }
