# docs/swagger.json
@@ -12,173 +12,66 @@
         },
         "version": "2.0"
     },
-    "host": "ocpp-dev.beepbeep.tech:8060",
+    "host": "ocpp-dev.chargegowhere.sg:8060",
     "paths": {
-        "/v2/ocpp/applications/callbacks": {
+        "/v2/ocpp/charge-points/{entityCode}/{chargePointIdentifier}": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Applications"
-                ],
-                "summary": "Get Callback URL for Application",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/rpc.GetApplicationCallbacksResp"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Applications"
-                ],
-                "summary": "Set Callback URL for Application",
-                "parameters": [
-                    {
-                        "description": "Post CreateApplicationCallbackReq body",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/rpc.CreateApplicationCallbackReqPublic"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/rpc.CreateApplicationCallbackResp"
-                        }
-                    }
-                }
-            }
-        },
-        "/v2/ocpp/charge_points": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Charge Points"
                 ],
-                "summary": "Create a Charge Point",
+                "summary": "Get charge point",
                 "parameters": [
                     {
-                        "description": "Post CreateChargePointReq body",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/rpc.CreateChargePointReqPublic"
-                        }
+                        "type": "string",
+                        "description": "entity code",
+                        "name": "entityCode",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "charge point identifier",
+                        "name": "chargePointIdentifier",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rpc.CreateChargePointResp"
+                            "$ref": "#/definitions/rpc.GetChargePointResp"
                         }
                     }
                 }
             }
         },
-        "/v2/ocpp/charge_points/id_tags": {
-            "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
+        "/v2/ocpp/charge-points/{entityCode}/{chargePointIdentifier}/status": {
+            "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Charge Points"
                 ],
-                "summary": "Create a Charge Point ID tag",
+                "summary": "Get charge point connector status",
                 "parameters": [
                     {
-                        "description": "Post CreateChargePointIdTagReq body",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/rpc.CreateChargePointIdTagReqPublic"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/rpc.CreateChargePointIdTagReq"
-                        }
-                    }
-                }
-            }
-        },
-        "/v2/ocpp/operations/get-latest-status": {
-            "post": {
-                "security": [
+                        "type": "string",
+                        "description": "entity code",
+                        "name": "entityCode",
+                        "in": "path",
+                        "required": true
+                    },
                     {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Operations"
-                ],
-                "summary": "Get Status of Connectors",
-                "parameters": [
-                    {
-                        "description": "Post GetLatestStatus body",
-                        "name": "Body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/rpc.GetLatestStatusNotificationsReqPublic"
-                        }
+                        "type": "string",
+                        "description": "charge point identifier",
+                        "name": "chargePointIdentifier",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -193,11 +86,6 @@
         },
         "/v2/ocpp/operations/remote-start-transaction": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -215,7 +103,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rpc.RemoteStartTransactionReqPublic"
+                            "$ref": "#/definitions/rpc.RemoteStartTransactionReq"
                         }
                     }
                 ],
@@ -231,11 +119,6 @@
         },
         "/v2/ocpp/operations/remote-stop-transaction": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -253,7 +136,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rpc.RemoteStopTransactionReqPublic"
+                            "$ref": "#/definitions/rpc.RemoteStopTransactionReq"
                         }
                     }
                 ],
@@ -269,29 +152,9 @@
         }
     },
     "definitions": {
-        "rpc.ApplicationCallback": {
-            "type": "object",
-            "properties": {
-                "application_id": {
-                    "type": "string"
-                },
-                "callback_event": {
-                    "type": "string"
-                },
-                "callback_url": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                }
-            }
-        },
         "rpc.ChargePoint": {
             "type": "object",
             "properties": {
-                "application_id": {
-                    "type": "string"
-                },
                 "charge_box_serial_number": {
                     "type": "string"
                 },
@@ -336,88 +199,11 @@
                 }
             }
         },
-        "rpc.CreateApplicationCallbackReqPublic": {
-            "type": "object",
-            "properties": {
-                "callback_event": {
-                    "type": "string"
-                },
-                "callback_url": {
-                    "type": "string"
-                }
-            }
-        },
-        "rpc.CreateApplicationCallbackResp": {
-            "type": "object",
-            "properties": {
-                "application_callback": {
-                    "$ref": "#/definitions/rpc.ApplicationCallback"
-                }
-            }
-        },
-        "rpc.CreateChargePointIdTagReq": {
-            "type": "object",
-            "properties": {
-                "application_id": {
-                    "type": "string"
-                },
-                "charge_point_identifier": {
-                    "type": "string"
-                },
-                "id_tag": {
-                    "type": "string"
-                }
-            }
-        },
-        "rpc.CreateChargePointIdTagReqPublic": {
-            "type": "object",
-            "properties": {
-                "charge_point_identifier": {
-                    "type": "string"
-                },
-                "id_tag": {
-                    "type": "string"
-                }
-            }
-        },
-        "rpc.CreateChargePointReqPublic": {
-            "type": "object",
-            "properties": {
-                "charge_point_identifier": {
-                    "type": "string"
-                },
-                "entity_code": {
-                    "type": "string"
-                },
-                "ocpp_protocol": {
-                    "type": "string"
-                }
-            }
-        },
-        "rpc.CreateChargePointResp": {
+        "rpc.GetChargePointResp": {
             "type": "object",
             "properties": {
                 "charge_point": {
                     "$ref": "#/definitions/rpc.ChargePoint"
-                }
-            }
-        },
-        "rpc.GetApplicationCallbacksResp": {
-            "type": "object",
-            "properties": {
-                "application_callbacks": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/rpc.ApplicationCallback"
-                    }
-                }
-            }
-        },
-        "rpc.GetLatestStatusNotificationsReqPublic": {
-            "type": "object",
-            "properties": {
-                "charge_point_identifier": {
-                    "type": "string"
                 }
             }
         },
@@ -432,7 +218,7 @@
                 }
             }
         },
-        "rpc.RemoteStartTransactionReqPublic": {
+        "rpc.RemoteStartTransactionReq": {
             "type": "object",
             "properties": {
                 "charge_point_identifier": {
@@ -440,6 +226,9 @@
                 },
                 "connector_id": {
                     "type": "integer"
+                },
+                "entity_code": {
+                    "type": "string"
                 }
             }
         },
@@ -451,7 +240,7 @@
                 }
             }
         },
-        "rpc.RemoteStopTransactionReqPublic": {
+        "rpc.RemoteStopTransactionReq": {
             "type": "object",
             "properties": {
                 "charge_point_identifier": {
@@ -459,6 +248,9 @@
                 },
                 "connector_id": {
                     "type": "integer"
+                },
+                "entity_code": {
+                    "type": "string"
                 }
             }
         },
@@ -468,9 +260,6 @@
         "rpc.StatusNotification": {
             "type": "object",
             "properties": {
-                "charge_point_id": {
-                    "type": "integer"
-                },
                 "connector_id": {
                     "type": "integer"
                 },
